Add a link to the Web app

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,10 +18,15 @@ library(railwayJP)
 
 ## Overview
 
-`railwayJP` is an R package for creating maps of railway routes across Japan. 
+`railwayJP` is an R package for creating maps of railway routes across Japan.
 
 It uses the National Land Numerical Information (Railway Data) from the Ministry of Land, Infrastructure, Transport and Tourism (MLIT).
 
+## Web Application
+
+A web-based version of this tool is available at: **https://soichiroy.github.io/railwayJP-web/**
+
+> **Note**: The web application is currently in development. Some features may be incomplete or subject to change.
 
 ## Installation
 
